// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rust-emitter byte-equivalence > crud types + client + resources stable > crud src/client.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use once_cell;
use reqwest;
use tokio_tungstenite;
use urlencoding;
use futures_util::{self, Stream};
use crate::errors::Error;
use crate::resources::*;
use crate::result::SdkResult;
use crate::runtime::ClientConfig;
use crate::sse::SseEvent;
use crate::types::*;
use crate::ws::TypedWebSocket;

pub(crate) struct ServiceEntry {
	pub method: &'static str,
	pub path: &'static str,
	pub params: &'static [&'static str],
	pub sse: bool,
	pub ws: bool,
	pub realtime: bool,
	pub invalidate: &'static [&'static str],
}

pub(crate) static INVALIDATION_MAP: once_cell::sync::Lazy<std::collections::HashMap<&'static str, std::collections::HashMap<&'static str, ServiceEntry>>> =
	once_cell::sync::Lazy::new(|| {
		let mut map = std::collections::HashMap::new();
		{
			let mut resource_map = std::collections::HashMap::new();
			resource_map.insert("create", ServiceEntry { method: "POST", path: "/users", params: &[], sse: false, ws: false, realtime: false, invalidate: &[] });
			resource_map.insert("delete", ServiceEntry { method: "DELETE", path: "/users/{id}", params: &["id"], sse: false, ws: false, realtime: false, invalidate: &[] });
			resource_map.insert("get", ServiceEntry { method: "GET", path: "/users/{id}", params: &["id"], sse: false, ws: false, realtime: false, invalidate: &[] });
			resource_map.insert("list", ServiceEntry { method: "GET", path: "/users", params: &[], sse: false, ws: false, realtime: false, invalidate: &[] });
			resource_map.insert("update", ServiceEntry { method: "PATCH", path: "/users/{id}", params: &["id"], sse: false, ws: false, realtime: false, invalidate: &[] });
			map.insert("users", resource_map);
		}
		map
	});

pub(crate) struct ClientInner {
	pub(crate) cfg: crate::runtime::ClientConfig,
	pub(crate) stale: Option<crate::invalidation::StaleTracker>,
	pub(crate) http_client: reqwest::Client,
}

/// Client is the generated SDK client.
pub struct Client {
	pub(crate) inner: std::sync::Arc<ClientInner>,
	users: UsersResource,
}

impl Client {
	/// new creates a new SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime::ClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: ClientConfig.base_url must not be empty");
		}
		/* http_client: None → build a default reqwest::Client */
		let http_client = if cfg.http_client.is_none() {
			reqwest::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation::StaleTracker::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(ClientInner { cfg, stale, http_client });
		Client {
			users: crate::resources::users::new_users_resource(&inner),
			inner,
		}
	}

	/// users returns a reference to the UsersResource.
	pub fn users(&self) -> &UsersResource {
		&self.users
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub async fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path).await,
			None => false,
		}
	}

}

pub(crate) struct SyncClientInner {
	pub(crate) cfg: crate::runtime_sync::SyncClientConfig,
	pub(crate) stale: Option<crate::invalidation_sync::StaleTrackerSync>,
	pub(crate) http_client: reqwest::blocking::Client,
}

/// SyncClient is the generated blocking SDK client.
/// WARNING: Do not use from inside a tokio async task — reqwest blocking will deadlock.
pub struct SyncClient {
	pub(crate) inner: std::sync::Arc<SyncClientInner>,
	users: UsersResourceSync,
}

impl SyncClient {
	/// new creates a new blocking SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime_sync::SyncClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: SyncClientConfig.base_url must not be empty");
		}
		let http_client = if cfg.http_client.is_none() {
			reqwest::blocking::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation_sync::StaleTrackerSync::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(SyncClientInner { cfg, stale, http_client });
		SyncClient {
			users: UsersResourceSync { client: std::sync::Arc::clone(&inner) },
			inner,
		}
	}

	/// users returns a reference to the UsersResourceSync.
	pub fn users(&self) -> &UsersResourceSync {
		&self.users
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path),
			None => false,
		}
	}

}
"
`;

exports[`rust-emitter byte-equivalence > crud types + client + resources stable > crud src/resources/mod.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

pub mod users;
pub use users::UsersResource;
pub use users::UsersResourceSync;
"
`;

exports[`rust-emitter byte-equivalence > crud types + client + resources stable > crud src/resources/users.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use futures_util::{self, Stream};
use reqwest;
use serde::{Serialize, Deserialize};
use tokio_tungstenite;
use urlencoding;
use crate::client::ClientInner;
use crate::client::SyncClientInner;
use crate::errors::Error;
use crate::result::SdkResult;
use crate::runtime::*;
use crate::runtime_sync::*;
use crate::types::*;
use crate::sse::SseEvent;
use crate::ws::TypedWebSocket;

pub struct UsersResource {
	pub(crate) client: std::sync::Arc<crate::client::ClientInner>,
}

impl UsersResource {
	/// Create user
	pub async fn create(&self, body: &UserCreateInput, opts: &UsersCreateOpts) -> Result<User, Error> {
		let url_path = "/users".to_string();
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::POST,
			&url_path,
			&query,
			crate::runtime::RequestBody::Json(&serde_json::to_value(body).unwrap_or_default()),
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"POST /users",
			None,
		).await?;
		let out: User = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
	/// Delete user
	pub async fn delete(&self, id: &str, opts: &UsersDeleteOpts) -> Result<(), Error> {
		let url_path = format!("/users/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::DELETE,
			&url_path,
			&query,
			crate::runtime::RequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"DELETE /users/{id}",
			None,
		).await?;
		Ok(())
	}
	
	/// Get user by id
	pub async fn get(&self, id: &str, opts: &UsersGetOpts) -> Result<User, Error> {
		let url_path = format!("/users/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime::RequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"GET /users/{id}",
			None,
		).await?;
		let out: User = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
	/// List users
	pub async fn list(&self, opts: &UsersListOpts) -> Result<Vec<User>, Error> {
		let url_path = "/users".to_string();
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime::RequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"GET /users",
			None,
		).await?;
		let out: Vec<User> = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
	/// Patch user
	pub async fn update(&self, id: &str, body: &UserPatchInput, opts: &UsersUpdateOpts) -> Result<User, Error> {
		let url_path = format!("/users/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::PATCH,
			&url_path,
			&query,
			crate::runtime::RequestBody::Json(&serde_json::to_value(body).unwrap_or_default()),
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"PATCH /users/{id}",
			None,
		).await?;
		let out: User = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

pub(crate) fn new_users_resource(client: &std::sync::Arc<crate::client::ClientInner>) -> UsersResource {
	UsersResource {
		client: std::sync::Arc::clone(client),
	}
}

pub struct UsersResourceSync {
	pub(crate) client: std::sync::Arc<crate::client::SyncClientInner>,
}

impl UsersResourceSync {
	/// Create user
	pub fn create(&self, body: &UserCreateInput, opts: &UsersCreateOpts) -> Result<User, Error> {
		let url_path = "/users".to_string();
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::POST,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::Json(&serde_json::to_value(body).unwrap_or_default()),
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"POST /users",
			None,
		)?;
		let out: User = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
	/// Delete user
	pub fn delete(&self, id: &str, opts: &UsersDeleteOpts) -> Result<(), Error> {
		let url_path = format!("/users/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::DELETE,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"DELETE /users/{id}",
			None,
		)?;
		Ok(())
	}
	
	/// Get user by id
	pub fn get(&self, id: &str, opts: &UsersGetOpts) -> Result<User, Error> {
		let url_path = format!("/users/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"GET /users/{id}",
			None,
		)?;
		let out: User = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
	/// List users
	pub fn list(&self, opts: &UsersListOpts) -> Result<Vec<User>, Error> {
		let url_path = "/users".to_string();
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"GET /users",
			None,
		)?;
		let out: Vec<User> = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
	/// Patch user
	pub fn update(&self, id: &str, body: &UserPatchInput, opts: &UsersUpdateOpts) -> Result<User, Error> {
		let url_path = format!("/users/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::PATCH,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::Json(&serde_json::to_value(body).unwrap_or_default()),
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"PATCH /users/{id}",
			None,
		)?;
		let out: User = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct UsersCreateOpts {
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct UsersDeleteOpts {
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct UsersGetOpts {
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct UsersListOpts {
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct UsersUpdateOpts {
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}
"
`;

exports[`rust-emitter byte-equivalence > crud types + client + resources stable > crud src/types.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports)]
use serde::{Serialize, Deserialize};
use serde_repr::{Serialize_repr, Deserialize_repr};
use std::collections::HashMap;

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ErrField {
	pub error_key: String,
	pub message: String,
	pub path: String,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ErrorEnvelope {
	pub error_key: String,
	pub fields: HashMap<String, Vec<String>>,
	pub message: String,
	pub status: i64,
	pub status_key: String,
	pub success: bool,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct User {
	pub email: String,
	pub id: String,
	pub name: String,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct UserCreateInput {
	pub email: String,
	pub name: String,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct UserPatchInput {
	#[serde(skip_serializing_if = "Option::is_none")]
	pub email: Option<String>,
	#[serde(skip_serializing_if = "Option::is_none")]
	pub name: Option<String>,
}
"
`;

exports[`rust-emitter byte-equivalence > discriminated types + client + resources stable > discriminated src/client.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use once_cell;
use reqwest;
use tokio_tungstenite;
use urlencoding;
use futures_util::{self, Stream};
use crate::errors::Error;
use crate::resources::*;
use crate::result::SdkResult;
use crate::runtime::ClientConfig;
use crate::sse::SseEvent;
use crate::types::*;
use crate::ws::TypedWebSocket;

pub(crate) struct ServiceEntry {
	pub method: &'static str,
	pub path: &'static str,
	pub params: &'static [&'static str],
	pub sse: bool,
	pub ws: bool,
	pub realtime: bool,
	pub invalidate: &'static [&'static str],
}

pub(crate) static INVALIDATION_MAP: once_cell::sync::Lazy<std::collections::HashMap<&'static str, std::collections::HashMap<&'static str, ServiceEntry>>> =
	once_cell::sync::Lazy::new(|| {
		let mut map = std::collections::HashMap::new();
		{
			let mut resource_map = std::collections::HashMap::new();
			resource_map.insert("get", ServiceEntry { method: "GET", path: "/animals/{id}", params: &["id"], sse: false, ws: false, realtime: false, invalidate: &[] });
			resource_map.insert("list", ServiceEntry { method: "GET", path: "/animals", params: &[], sse: false, ws: false, realtime: false, invalidate: &[] });
			map.insert("animals", resource_map);
		}
		map
	});

pub(crate) struct ClientInner {
	pub(crate) cfg: crate::runtime::ClientConfig,
	pub(crate) stale: Option<crate::invalidation::StaleTracker>,
	pub(crate) http_client: reqwest::Client,
}

/// Client is the generated SDK client.
pub struct Client {
	pub(crate) inner: std::sync::Arc<ClientInner>,
	animals: AnimalsResource,
}

impl Client {
	/// new creates a new SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime::ClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: ClientConfig.base_url must not be empty");
		}
		/* http_client: None → build a default reqwest::Client */
		let http_client = if cfg.http_client.is_none() {
			reqwest::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation::StaleTracker::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(ClientInner { cfg, stale, http_client });
		Client {
			animals: crate::resources::animals::new_animals_resource(&inner),
			inner,
		}
	}

	/// animals returns a reference to the AnimalsResource.
	pub fn animals(&self) -> &AnimalsResource {
		&self.animals
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub async fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path).await,
			None => false,
		}
	}

}

pub(crate) struct SyncClientInner {
	pub(crate) cfg: crate::runtime_sync::SyncClientConfig,
	pub(crate) stale: Option<crate::invalidation_sync::StaleTrackerSync>,
	pub(crate) http_client: reqwest::blocking::Client,
}

/// SyncClient is the generated blocking SDK client.
/// WARNING: Do not use from inside a tokio async task — reqwest blocking will deadlock.
pub struct SyncClient {
	pub(crate) inner: std::sync::Arc<SyncClientInner>,
	animals: AnimalsResourceSync,
}

impl SyncClient {
	/// new creates a new blocking SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime_sync::SyncClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: SyncClientConfig.base_url must not be empty");
		}
		let http_client = if cfg.http_client.is_none() {
			reqwest::blocking::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation_sync::StaleTrackerSync::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(SyncClientInner { cfg, stale, http_client });
		SyncClient {
			animals: AnimalsResourceSync { client: std::sync::Arc::clone(&inner) },
			inner,
		}
	}

	/// animals returns a reference to the AnimalsResourceSync.
	pub fn animals(&self) -> &AnimalsResourceSync {
		&self.animals
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path),
			None => false,
		}
	}

}
"
`;

exports[`rust-emitter byte-equivalence > discriminated types + client + resources stable > discriminated src/resources/animals.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use futures_util::{self, Stream};
use reqwest;
use serde::{Serialize, Deserialize};
use tokio_tungstenite;
use urlencoding;
use crate::client::ClientInner;
use crate::client::SyncClientInner;
use crate::errors::Error;
use crate::result::SdkResult;
use crate::runtime::*;
use crate::runtime_sync::*;
use crate::types::*;
use crate::sse::SseEvent;
use crate::ws::TypedWebSocket;

pub struct AnimalsResource {
	pub(crate) client: std::sync::Arc<crate::client::ClientInner>,
}

impl AnimalsResource {
	/// Get animal
	pub async fn get(&self, id: &str, opts: &AnimalsGetOpts) -> Result<Animal, Error> {
		let url_path = format!("/animals/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime::RequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"GET /animals/{id}",
			None,
		).await?;
		let out: Animal = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
	/// List animals
	pub async fn list(&self, opts: &AnimalsListOpts) -> Result<Vec<Animal>, Error> {
		let url_path = "/animals".to_string();
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime::RequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"GET /animals",
			None,
		).await?;
		let out: Vec<Animal> = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

pub(crate) fn new_animals_resource(client: &std::sync::Arc<crate::client::ClientInner>) -> AnimalsResource {
	AnimalsResource {
		client: std::sync::Arc::clone(client),
	}
}

pub struct AnimalsResourceSync {
	pub(crate) client: std::sync::Arc<crate::client::SyncClientInner>,
}

impl AnimalsResourceSync {
	/// Get animal
	pub fn get(&self, id: &str, opts: &AnimalsGetOpts) -> Result<Animal, Error> {
		let url_path = format!("/animals/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"GET /animals/{id}",
			None,
		)?;
		let out: Animal = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
	/// List animals
	pub fn list(&self, opts: &AnimalsListOpts) -> Result<Vec<Animal>, Error> {
		let url_path = "/animals".to_string();
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"GET /animals",
			None,
		)?;
		let out: Vec<Animal> = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct AnimalsGetOpts {
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct AnimalsListOpts {
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}
"
`;

exports[`rust-emitter byte-equivalence > discriminated types + client + resources stable > discriminated src/resources/mod.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

pub mod animals;
pub use animals::AnimalsResource;
pub use animals::AnimalsResourceSync;
"
`;

exports[`rust-emitter byte-equivalence > discriminated types + client + resources stable > discriminated src/types.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports)]
use serde::{Serialize, Deserialize};
use serde_repr::{Serialize_repr, Deserialize_repr};
use std::collections::HashMap;

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ErrField {
	pub error_key: String,
	pub message: String,
	pub path: String,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
#[serde(tag = "kind")]
pub enum Animal {
	Dog(Dog),
	Cat(Cat),
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Cat {
	pub indoor: bool,
	pub kind: String,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Dog {
	pub breed: String,
	pub kind: String,
}
"
`;

exports[`rust-emitter byte-equivalence > invalidation types + client + resources stable > invalidation src/client.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use once_cell;
use reqwest;
use tokio_tungstenite;
use urlencoding;
use futures_util::{self, Stream};
use crate::errors::Error;
use crate::resources::*;
use crate::result::SdkResult;
use crate::runtime::ClientConfig;
use crate::sse::SseEvent;
use crate::types::*;
use crate::ws::TypedWebSocket;

pub(crate) struct ServiceEntry {
	pub method: &'static str,
	pub path: &'static str,
	pub params: &'static [&'static str],
	pub sse: bool,
	pub ws: bool,
	pub realtime: bool,
	pub invalidate: &'static [&'static str],
}

pub(crate) static INVALIDATION_MAP: once_cell::sync::Lazy<std::collections::HashMap<&'static str, std::collections::HashMap<&'static str, ServiceEntry>>> =
	once_cell::sync::Lazy::new(|| {
		let mut map = std::collections::HashMap::new();
		{
			let mut resource_map = std::collections::HashMap::new();
			resource_map.insert("create", ServiceEntry { method: "POST", path: "/users", params: &[], sse: false, ws: false, realtime: false, invalidate: &["GET /users", "GET /users/:id"] });
			resource_map.insert("getById", ServiceEntry { method: "GET", path: "/users/{id}", params: &["id"], sse: false, ws: false, realtime: false, invalidate: &[] });
			resource_map.insert("list", ServiceEntry { method: "GET", path: "/users", params: &[], sse: false, ws: false, realtime: false, invalidate: &[] });
			map.insert("users", resource_map);
		}
		map
	});

pub(crate) struct ClientInner {
	pub(crate) cfg: crate::runtime::ClientConfig,
	pub(crate) stale: Option<crate::invalidation::StaleTracker>,
	pub(crate) http_client: reqwest::Client,
}

/// Client is the generated SDK client.
pub struct Client {
	pub(crate) inner: std::sync::Arc<ClientInner>,
	users: UsersResource,
}

impl Client {
	/// new creates a new SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime::ClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: ClientConfig.base_url must not be empty");
		}
		/* http_client: None → build a default reqwest::Client */
		let http_client = if cfg.http_client.is_none() {
			reqwest::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation::StaleTracker::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(ClientInner { cfg, stale, http_client });
		Client {
			users: crate::resources::users::new_users_resource(&inner),
			inner,
		}
	}

	/// users returns a reference to the UsersResource.
	pub fn users(&self) -> &UsersResource {
		&self.users
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub async fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path).await,
			None => false,
		}
	}

}

pub(crate) struct SyncClientInner {
	pub(crate) cfg: crate::runtime_sync::SyncClientConfig,
	pub(crate) stale: Option<crate::invalidation_sync::StaleTrackerSync>,
	pub(crate) http_client: reqwest::blocking::Client,
}

/// SyncClient is the generated blocking SDK client.
/// WARNING: Do not use from inside a tokio async task — reqwest blocking will deadlock.
pub struct SyncClient {
	pub(crate) inner: std::sync::Arc<SyncClientInner>,
	users: UsersResourceSync,
}

impl SyncClient {
	/// new creates a new blocking SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime_sync::SyncClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: SyncClientConfig.base_url must not be empty");
		}
		let http_client = if cfg.http_client.is_none() {
			reqwest::blocking::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation_sync::StaleTrackerSync::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(SyncClientInner { cfg, stale, http_client });
		SyncClient {
			users: UsersResourceSync { client: std::sync::Arc::clone(&inner) },
			inner,
		}
	}

	/// users returns a reference to the UsersResourceSync.
	pub fn users(&self) -> &UsersResourceSync {
		&self.users
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path),
			None => false,
		}
	}

}
"
`;

exports[`rust-emitter byte-equivalence > invalidation types + client + resources stable > invalidation src/resources/mod.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

pub mod users;
pub use users::UsersResource;
pub use users::UsersResourceSync;
"
`;

exports[`rust-emitter byte-equivalence > invalidation types + client + resources stable > invalidation src/resources/users.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use futures_util::{self, Stream};
use reqwest;
use serde::{Serialize, Deserialize};
use tokio_tungstenite;
use urlencoding;
use crate::client::ClientInner;
use crate::client::SyncClientInner;
use crate::errors::Error;
use crate::result::SdkResult;
use crate::runtime::*;
use crate::runtime_sync::*;
use crate::types::*;
use crate::sse::SseEvent;
use crate::ws::TypedWebSocket;

pub struct UsersResource {
	pub(crate) client: std::sync::Arc<crate::client::ClientInner>,
}

impl UsersResource {
	/// Create user
	pub async fn create(&self, body: &UserCreateInput, opts: &UsersCreateOpts) -> Result<User, Error> {
		let url_path = "/users".to_string();
		let query: Vec<(String, String)> = Vec::new();
		let _path_params_map: std::collections::HashMap<String, String> = std::collections::HashMap::<String, String>::new();
		let _concrete_path = crate::invalidation::interpolate_path("/users", &_path_params_map).unwrap_or_else(|_| "/users".to_string());
		let _concrete_selector = format!("POST {}", _concrete_path);
		let _request_meta: Option<crate::invalidation::RequestMeta> = match self.client.stale {
			Some(ref s) => s.build_request_meta(&_concrete_selector, &_concrete_path, "POST").await,
			None => None,
		};
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::POST,
			&url_path,
			&query,
			crate::runtime::RequestBody::Json(&serde_json::to_value(body).unwrap_or_default()),
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"POST /users",
			_request_meta.as_ref(),
		).await?;
		if let Some(ref stale) = self.client.stale {
			if let Some(resource_map) = crate::client::INVALIDATION_MAP.get("users") {
				if let Some(entry) = resource_map.get("create") {
					let targets: Vec<String> = entry.invalidate.iter().map(|s| s.to_string()).collect();
					stale.mark_stale(&targets, &_path_params_map, &_concrete_selector).await;
				}
			}
			if let Some(ref meta) = _request_meta {
				if meta.is_stale {
					stale.clear_stale(&_concrete_selector, &_concrete_path, "POST", meta.seq_snapshot).await;
				}
			}
		}
		let out: User = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
	/// Get user by id
	pub async fn get_by_id(&self, id: &str, opts: &UsersGetByIdOpts) -> Result<User, Error> {
		let url_path = format!("/users/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime::RequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"GET /users/{id}",
			None,
		).await?;
		let out: User = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
	/// List users
	pub async fn list(&self, opts: &UsersListOpts) -> Result<Vec<User>, Error> {
		let url_path = "/users".to_string();
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime::RequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"GET /users",
			None,
		).await?;
		let out: Vec<User> = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

pub(crate) fn new_users_resource(client: &std::sync::Arc<crate::client::ClientInner>) -> UsersResource {
	UsersResource {
		client: std::sync::Arc::clone(client),
	}
}

pub struct UsersResourceSync {
	pub(crate) client: std::sync::Arc<crate::client::SyncClientInner>,
}

impl UsersResourceSync {
	/// Create user
	pub fn create(&self, body: &UserCreateInput, opts: &UsersCreateOpts) -> Result<User, Error> {
		let url_path = "/users".to_string();
		let query: Vec<(String, String)> = Vec::new();
		let _path_params_map: std::collections::HashMap<String, String> = std::collections::HashMap::<String, String>::new();
		let _concrete_path = crate::invalidation::interpolate_path("/users", &_path_params_map).unwrap_or_else(|_| "/users".to_string());
		let _concrete_selector = format!("POST {}", _concrete_path);
		let _request_meta: Option<crate::invalidation::RequestMeta> = match self.client.stale {
			Some(ref s) => s.build_request_meta(&_concrete_selector, &_concrete_path, "POST"),
			None => None,
		};
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::POST,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::Json(&serde_json::to_value(body).unwrap_or_default()),
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"POST /users",
			_request_meta.as_ref(),
		)?;
		if let Some(ref stale) = self.client.stale {
			if let Some(resource_map) = crate::client::INVALIDATION_MAP.get("users") {
				if let Some(entry) = resource_map.get("create") {
					let targets: Vec<String> = entry.invalidate.iter().map(|s| s.to_string()).collect();
					stale.mark_stale(&targets, &_path_params_map, &_concrete_selector);
				}
			}
			if let Some(ref meta) = _request_meta {
				if meta.is_stale {
					stale.clear_stale(&_concrete_selector, &_concrete_path, "POST", meta.seq_snapshot);
				}
			}
		}
		let out: User = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
	/// Get user by id
	pub fn get_by_id(&self, id: &str, opts: &UsersGetByIdOpts) -> Result<User, Error> {
		let url_path = format!("/users/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"GET /users/{id}",
			None,
		)?;
		let out: User = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
	/// List users
	pub fn list(&self, opts: &UsersListOpts) -> Result<Vec<User>, Error> {
		let url_path = "/users".to_string();
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"GET /users",
			None,
		)?;
		let out: Vec<User> = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct UsersCreateOpts {
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct UsersGetByIdOpts {
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct UsersListOpts {
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}
"
`;

exports[`rust-emitter byte-equivalence > invalidation types + client + resources stable > invalidation src/types.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports)]
use serde::{Serialize, Deserialize};
use serde_repr::{Serialize_repr, Deserialize_repr};
use std::collections::HashMap;

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ErrField {
	pub error_key: String,
	pub message: String,
	pub path: String,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct User {
	pub email: String,
	pub id: String,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct UserCreateInput {
	pub email: String,
}
"
`;

exports[`rust-emitter byte-equivalence > refs types + client + resources stable > refs src/client.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use once_cell;
use reqwest;
use tokio_tungstenite;
use urlencoding;
use futures_util::{self, Stream};
use crate::errors::Error;
use crate::resources::*;
use crate::result::SdkResult;
use crate::runtime::ClientConfig;
use crate::sse::SseEvent;
use crate::types::*;
use crate::ws::TypedWebSocket;

pub(crate) struct ServiceEntry {
	pub method: &'static str,
	pub path: &'static str,
	pub params: &'static [&'static str],
	pub sse: bool,
	pub ws: bool,
	pub realtime: bool,
	pub invalidate: &'static [&'static str],
}

pub(crate) static INVALIDATION_MAP: once_cell::sync::Lazy<std::collections::HashMap<&'static str, std::collections::HashMap<&'static str, ServiceEntry>>> =
	once_cell::sync::Lazy::new(|| {
		let mut map = std::collections::HashMap::new();
		{
			let mut resource_map = std::collections::HashMap::new();
			resource_map.insert("get", ServiceEntry { method: "GET", path: "/comments/{id}", params: &["id"], sse: false, ws: false, realtime: false, invalidate: &[] });
			map.insert("comments", resource_map);
		}
		{
			let mut resource_map = std::collections::HashMap::new();
			resource_map.insert("get", ServiceEntry { method: "GET", path: "/users/{id}", params: &["id"], sse: false, ws: false, realtime: false, invalidate: &[] });
			map.insert("users", resource_map);
		}
		map
	});

pub(crate) struct ClientInner {
	pub(crate) cfg: crate::runtime::ClientConfig,
	pub(crate) stale: Option<crate::invalidation::StaleTracker>,
	pub(crate) http_client: reqwest::Client,
}

/// Client is the generated SDK client.
pub struct Client {
	pub(crate) inner: std::sync::Arc<ClientInner>,
	comments: CommentsResource,
	users: UsersResource,
}

impl Client {
	/// new creates a new SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime::ClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: ClientConfig.base_url must not be empty");
		}
		/* http_client: None → build a default reqwest::Client */
		let http_client = if cfg.http_client.is_none() {
			reqwest::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation::StaleTracker::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(ClientInner { cfg, stale, http_client });
		Client {
			comments: crate::resources::comments::new_comments_resource(&inner),
			users: crate::resources::users::new_users_resource(&inner),
			inner,
		}
	}

	/// comments returns a reference to the CommentsResource.
	pub fn comments(&self) -> &CommentsResource {
		&self.comments
	}

	/// users returns a reference to the UsersResource.
	pub fn users(&self) -> &UsersResource {
		&self.users
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub async fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path).await,
			None => false,
		}
	}

}

pub(crate) struct SyncClientInner {
	pub(crate) cfg: crate::runtime_sync::SyncClientConfig,
	pub(crate) stale: Option<crate::invalidation_sync::StaleTrackerSync>,
	pub(crate) http_client: reqwest::blocking::Client,
}

/// SyncClient is the generated blocking SDK client.
/// WARNING: Do not use from inside a tokio async task — reqwest blocking will deadlock.
pub struct SyncClient {
	pub(crate) inner: std::sync::Arc<SyncClientInner>,
	comments: CommentsResourceSync,
	users: UsersResourceSync,
}

impl SyncClient {
	/// new creates a new blocking SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime_sync::SyncClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: SyncClientConfig.base_url must not be empty");
		}
		let http_client = if cfg.http_client.is_none() {
			reqwest::blocking::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation_sync::StaleTrackerSync::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(SyncClientInner { cfg, stale, http_client });
		SyncClient {
			comments: CommentsResourceSync { client: std::sync::Arc::clone(&inner) },
			users: UsersResourceSync { client: std::sync::Arc::clone(&inner) },
			inner,
		}
	}

	/// comments returns a reference to the CommentsResourceSync.
	pub fn comments(&self) -> &CommentsResourceSync {
		&self.comments
	}

	/// users returns a reference to the UsersResourceSync.
	pub fn users(&self) -> &UsersResourceSync {
		&self.users
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path),
			None => false,
		}
	}

}
"
`;

exports[`rust-emitter byte-equivalence > refs types + client + resources stable > refs src/resources/comments.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use futures_util::{self, Stream};
use reqwest;
use serde::{Serialize, Deserialize};
use tokio_tungstenite;
use urlencoding;
use crate::client::ClientInner;
use crate::client::SyncClientInner;
use crate::errors::Error;
use crate::result::SdkResult;
use crate::runtime::*;
use crate::runtime_sync::*;
use crate::types::*;
use crate::sse::SseEvent;
use crate::ws::TypedWebSocket;

pub struct CommentsResource {
	pub(crate) client: std::sync::Arc<crate::client::ClientInner>,
}

impl CommentsResource {
	/// Get comment with self-ref parent
	pub async fn get(&self, id: &str, opts: &CommentsGetOpts) -> Result<Comment, Error> {
		let url_path = format!("/comments/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime::RequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"GET /comments/{id}",
			None,
		).await?;
		let out: Comment = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

pub(crate) fn new_comments_resource(client: &std::sync::Arc<crate::client::ClientInner>) -> CommentsResource {
	CommentsResource {
		client: std::sync::Arc::clone(client),
	}
}

pub struct CommentsResourceSync {
	pub(crate) client: std::sync::Arc<crate::client::SyncClientInner>,
}

impl CommentsResourceSync {
	/// Get comment with self-ref parent
	pub fn get(&self, id: &str, opts: &CommentsGetOpts) -> Result<Comment, Error> {
		let url_path = format!("/comments/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"GET /comments/{id}",
			None,
		)?;
		let out: Comment = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct CommentsGetOpts {
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}
"
`;

exports[`rust-emitter byte-equivalence > refs types + client + resources stable > refs src/resources/mod.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

pub mod comments;
pub mod users;
pub use comments::CommentsResource;
pub use comments::CommentsResourceSync;
pub use users::UsersResource;
pub use users::UsersResourceSync;
"
`;

exports[`rust-emitter byte-equivalence > refs types + client + resources stable > refs src/resources/users.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use futures_util::{self, Stream};
use reqwest;
use serde::{Serialize, Deserialize};
use tokio_tungstenite;
use urlencoding;
use crate::client::ClientInner;
use crate::client::SyncClientInner;
use crate::errors::Error;
use crate::result::SdkResult;
use crate::runtime::*;
use crate::runtime_sync::*;
use crate::types::*;
use crate::sse::SseEvent;
use crate::ws::TypedWebSocket;

pub struct UsersResource {
	pub(crate) client: std::sync::Arc<crate::client::ClientInner>,
}

impl UsersResource {
	/// Get user with comments
	pub async fn get(&self, id: &str, opts: &UsersGetOpts) -> Result<User, Error> {
		let url_path = format!("/users/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime::RequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"GET /users/{id}",
			None,
		).await?;
		let out: User = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

pub(crate) fn new_users_resource(client: &std::sync::Arc<crate::client::ClientInner>) -> UsersResource {
	UsersResource {
		client: std::sync::Arc::clone(client),
	}
}

pub struct UsersResourceSync {
	pub(crate) client: std::sync::Arc<crate::client::SyncClientInner>,
}

impl UsersResourceSync {
	/// Get user with comments
	pub fn get(&self, id: &str, opts: &UsersGetOpts) -> Result<User, Error> {
		let url_path = format!("/users/{}", urlencoding::encode(id).into_owned());
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"GET /users/{id}",
			None,
		)?;
		let out: User = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct UsersGetOpts {
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}
"
`;

exports[`rust-emitter byte-equivalence > refs types + client + resources stable > refs src/types.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports)]
use serde::{Serialize, Deserialize};
use serde_repr::{Serialize_repr, Deserialize_repr};
use std::collections::HashMap;

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ErrField {
	pub error_key: String,
	pub message: String,
	pub path: String,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Comment {
	#[serde(skip_serializing_if = "Option::is_none")]
	pub author: Option<User>,
	pub body: String,
	pub id: String,
	#[serde(skip_serializing_if = "Option::is_none")]
	pub parent: Option<Box<Comment>>,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct User {
	#[serde(skip_serializing_if = "Option::is_none")]
	pub comments: Option<Vec<Comment>>,
	pub email: String,
	pub id: String,
}
"
`;

exports[`rust-emitter byte-equivalence > reserved-words types + client + resources stable > reserved-words src/client.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use once_cell;
use reqwest;
use tokio_tungstenite;
use urlencoding;
use futures_util::{self, Stream};
use crate::errors::Error;
use crate::resources::*;
use crate::result::SdkResult;
use crate::runtime::ClientConfig;
use crate::sse::SseEvent;
use crate::types::*;
use crate::ws::TypedWebSocket;

pub(crate) struct ServiceEntry {
	pub method: &'static str,
	pub path: &'static str,
	pub params: &'static [&'static str],
	pub sse: bool,
	pub ws: bool,
	pub realtime: bool,
	pub invalidate: &'static [&'static str],
}

pub(crate) static INVALIDATION_MAP: once_cell::sync::Lazy<std::collections::HashMap<&'static str, std::collections::HashMap<&'static str, ServiceEntry>>> =
	once_cell::sync::Lazy::new(|| {
		let mut map = std::collections::HashMap::new();
		{
			let mut resource_map = std::collections::HashMap::new();
			resource_map.insert("yield", ServiceEntry { method: "POST", path: "/await/yield", params: &[], sse: false, ws: false, realtime: false, invalidate: &[] });
			map.insert("await", resource_map);
		}
		{
			let mut resource_map = std::collections::HashMap::new();
			resource_map.insert("from", ServiceEntry { method: "GET", path: "/class/from", params: &[], sse: false, ws: false, realtime: false, invalidate: &[] });
			map.insert("class", resource_map);
		}
		map
	});

pub(crate) struct ClientInner {
	pub(crate) cfg: crate::runtime::ClientConfig,
	pub(crate) stale: Option<crate::invalidation::StaleTracker>,
	pub(crate) http_client: reqwest::Client,
}

/// Client is the generated SDK client.
pub struct Client {
	pub(crate) inner: std::sync::Arc<ClientInner>,
	await_: Await_Resource,
	class: ClassResource,
}

impl Client {
	/// new creates a new SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime::ClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: ClientConfig.base_url must not be empty");
		}
		/* http_client: None → build a default reqwest::Client */
		let http_client = if cfg.http_client.is_none() {
			reqwest::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation::StaleTracker::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(ClientInner { cfg, stale, http_client });
		Client {
			await_: crate::resources::await_::new_await__resource(&inner),
			class: crate::resources::class::new_class_resource(&inner),
			inner,
		}
	}

	/// await_ returns a reference to the Await_Resource.
	pub fn await_(&self) -> &Await_Resource {
		&self.await_
	}

	/// class returns a reference to the ClassResource.
	pub fn class(&self) -> &ClassResource {
		&self.class
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub async fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path).await,
			None => false,
		}
	}

}

pub(crate) struct SyncClientInner {
	pub(crate) cfg: crate::runtime_sync::SyncClientConfig,
	pub(crate) stale: Option<crate::invalidation_sync::StaleTrackerSync>,
	pub(crate) http_client: reqwest::blocking::Client,
}

/// SyncClient is the generated blocking SDK client.
/// WARNING: Do not use from inside a tokio async task — reqwest blocking will deadlock.
pub struct SyncClient {
	pub(crate) inner: std::sync::Arc<SyncClientInner>,
	await_: Await_ResourceSync,
	class: ClassResourceSync,
}

impl SyncClient {
	/// new creates a new blocking SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime_sync::SyncClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: SyncClientConfig.base_url must not be empty");
		}
		let http_client = if cfg.http_client.is_none() {
			reqwest::blocking::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation_sync::StaleTrackerSync::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(SyncClientInner { cfg, stale, http_client });
		SyncClient {
			await_: Await_ResourceSync { client: std::sync::Arc::clone(&inner) },
			class: ClassResourceSync { client: std::sync::Arc::clone(&inner) },
			inner,
		}
	}

	/// await_ returns a reference to the Await_ResourceSync.
	pub fn await_(&self) -> &Await_ResourceSync {
		&self.await_
	}

	/// class returns a reference to the ClassResourceSync.
	pub fn class(&self) -> &ClassResourceSync {
		&self.class
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path),
			None => false,
		}
	}

}
"
`;

exports[`rust-emitter byte-equivalence > reserved-words types + client + resources stable > reserved-words src/resources/await_.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use futures_util::{self, Stream};
use reqwest;
use serde::{Serialize, Deserialize};
use tokio_tungstenite;
use urlencoding;
use crate::client::ClientInner;
use crate::client::SyncClientInner;
use crate::errors::Error;
use crate::result::SdkResult;
use crate::runtime::*;
use crate::runtime_sync::*;
use crate::types::*;
use crate::sse::SseEvent;
use crate::ws::TypedWebSocket;

pub struct Await_Resource {
	pub(crate) client: std::sync::Arc<crate::client::ClientInner>,
}

impl Await_Resource {
	/// More reserved words as resource and action
	pub async fn r#yield(&self, body: &serde_json::Value, opts: &AwaitYieldOpts) -> Result<serde_json::Value, Error> {
		let url_path = "/await/yield".to_string();
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::POST,
			&url_path,
			&query,
			crate::runtime::RequestBody::Json(&serde_json::to_value(body).unwrap_or_default()),
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"POST /await/yield",
			None,
		).await?;
		let out: serde_json::Value = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

pub(crate) fn new_await__resource(client: &std::sync::Arc<crate::client::ClientInner>) -> Await_Resource {
	Await_Resource {
		client: std::sync::Arc::clone(client),
	}
}

pub struct Await_ResourceSync {
	pub(crate) client: std::sync::Arc<crate::client::SyncClientInner>,
}

impl Await_ResourceSync {
	/// More reserved words as resource and action
	pub fn r#yield(&self, body: &serde_json::Value, opts: &AwaitYieldOpts) -> Result<serde_json::Value, Error> {
		let url_path = "/await/yield".to_string();
		let query: Vec<(String, String)> = Vec::new();
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::POST,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::Json(&serde_json::to_value(body).unwrap_or_default()),
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"POST /await/yield",
			None,
		)?;
		let out: serde_json::Value = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct AwaitYieldOpts {
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}
"
`;

exports[`rust-emitter byte-equivalence > reserved-words types + client + resources stable > reserved-words src/resources/class.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use futures_util::{self, Stream};
use reqwest;
use serde::{Serialize, Deserialize};
use tokio_tungstenite;
use urlencoding;
use crate::client::ClientInner;
use crate::client::SyncClientInner;
use crate::errors::Error;
use crate::result::SdkResult;
use crate::runtime::*;
use crate::runtime_sync::*;
use crate::types::*;
use crate::sse::SseEvent;
use crate::ws::TypedWebSocket;

pub struct ClassResource {
	pub(crate) client: std::sync::Arc<crate::client::ClientInner>,
}

impl ClassResource {
	/// Both parts are Python reserved words
	pub async fn from(&self, opts: &ClassFromOpts) -> Result<String, Error> {
		let url_path = "/class/from".to_string();
		let mut query: Vec<(String, String)> = Vec::new();
		if let Some(ref v) = opts.async_ { query.push(("async".to_string(), v.to_string())); }
		if let Some(ref v) = opts.return_ { query.push(("return".to_string(), v.clone())); }
		let result = crate::runtime::do_request(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime::RequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.cancel_token.clone(),
			"GET /class/from",
			None,
		).await?;
		let out: String = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

pub(crate) fn new_class_resource(client: &std::sync::Arc<crate::client::ClientInner>) -> ClassResource {
	ClassResource {
		client: std::sync::Arc::clone(client),
	}
}

pub struct ClassResourceSync {
	pub(crate) client: std::sync::Arc<crate::client::SyncClientInner>,
}

impl ClassResourceSync {
	/// Both parts are Python reserved words
	pub fn from(&self, opts: &ClassFromOpts) -> Result<String, Error> {
		let url_path = "/class/from".to_string();
		let mut query: Vec<(String, String)> = Vec::new();
		if let Some(ref v) = opts.async_ { query.push(("async".to_string(), v.to_string())); }
		if let Some(ref v) = opts.return_ { query.push(("return".to_string(), v.clone())); }
		let result = crate::runtime_sync::do_request_blocking(
			&self.client.http_client,
			&self.client.cfg,
			reqwest::Method::GET,
			&url_path,
			&query,
			crate::runtime_sync::SyncRequestBody::None,
			opts.headers.as_ref(),
			opts.timeout,
			opts.sync_cancel_token.clone(),
			"GET /class/from",
			None,
		)?;
		let out: String = serde_json::from_slice(&result.body)?;
		Ok(out)
	}
	
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct ClassFromOpts {
	#[serde(rename = "async", skip_serializing_if = "Option::is_none")]
	pub async_: Option<bool>,
	#[serde(rename = "return", skip_serializing_if = "Option::is_none")]
	pub return_: Option<String>,
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
	#[serde(skip)]
	pub timeout: Option<std::time::Duration>,
	#[serde(skip)]
	pub cancel_token: Option<tokio_util::sync::CancellationToken>,
	#[serde(skip)]
	pub sync_cancel_token: Option<std::sync::Arc<std::sync::atomic::AtomicBool>>,
}
"
`;

exports[`rust-emitter byte-equivalence > reserved-words types + client + resources stable > reserved-words src/resources/mod.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

pub mod await_;
pub mod class;
pub use await_::Await_Resource;
pub use await_::Await_ResourceSync;
pub use class::ClassResource;
pub use class::ClassResourceSync;
"
`;

exports[`rust-emitter byte-equivalence > reserved-words types + client + resources stable > reserved-words src/types.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports)]
use serde::{Serialize, Deserialize};
use serde_repr::{Serialize_repr, Deserialize_repr};
use std::collections::HashMap;

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ErrField {
	pub error_key: String,
	pub message: String,
	pub path: String,
}
"
`;

exports[`rust-emitter byte-equivalence > sse types + client + resources stable > sse src/client.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use once_cell;
use reqwest;
use tokio_tungstenite;
use urlencoding;
use futures_util::{self, Stream};
use crate::errors::Error;
use crate::resources::*;
use crate::result::SdkResult;
use crate::runtime::ClientConfig;
use crate::sse::SseEvent;
use crate::types::*;
use crate::ws::TypedWebSocket;

pub(crate) struct ServiceEntry {
	pub method: &'static str,
	pub path: &'static str,
	pub params: &'static [&'static str],
	pub sse: bool,
	pub ws: bool,
	pub realtime: bool,
	pub invalidate: &'static [&'static str],
}

pub(crate) static INVALIDATION_MAP: once_cell::sync::Lazy<std::collections::HashMap<&'static str, std::collections::HashMap<&'static str, ServiceEntry>>> =
	once_cell::sync::Lazy::new(|| {
		let mut map = std::collections::HashMap::new();
		{
			let mut resource_map = std::collections::HashMap::new();
			resource_map.insert("stream", ServiceEntry { method: "GET", path: "/events/stream", params: &[], sse: true, ws: false, realtime: false, invalidate: &[] });
			map.insert("events", resource_map);
		}
		map
	});

pub(crate) struct ClientInner {
	pub(crate) cfg: crate::runtime::ClientConfig,
	pub(crate) stale: Option<crate::invalidation::StaleTracker>,
	pub(crate) http_client: reqwest::Client,
}

/// Client is the generated SDK client.
pub struct Client {
	pub(crate) inner: std::sync::Arc<ClientInner>,
	events: EventsResource,
}

impl Client {
	/// new creates a new SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime::ClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: ClientConfig.base_url must not be empty");
		}
		/* http_client: None → build a default reqwest::Client */
		let http_client = if cfg.http_client.is_none() {
			reqwest::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation::StaleTracker::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(ClientInner { cfg, stale, http_client });
		Client {
			events: crate::resources::events::new_events_resource(&inner),
			inner,
		}
	}

	/// events returns a reference to the EventsResource.
	pub fn events(&self) -> &EventsResource {
		&self.events
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub async fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path).await,
			None => false,
		}
	}

}

pub(crate) struct SyncClientInner {
	pub(crate) cfg: crate::runtime_sync::SyncClientConfig,
	pub(crate) stale: Option<crate::invalidation_sync::StaleTrackerSync>,
	pub(crate) http_client: reqwest::blocking::Client,
}

/// SyncClient is the generated blocking SDK client.
/// WARNING: Do not use from inside a tokio async task — reqwest blocking will deadlock.
pub struct SyncClient {
	pub(crate) inner: std::sync::Arc<SyncClientInner>,
}

impl SyncClient {
	/// new creates a new blocking SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime_sync::SyncClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: SyncClientConfig.base_url must not be empty");
		}
		let http_client = if cfg.http_client.is_none() {
			reqwest::blocking::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation_sync::StaleTrackerSync::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(SyncClientInner { cfg, stale, http_client });
		SyncClient {
			inner,
		}
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path),
			None => false,
		}
	}

}
"
`;

exports[`rust-emitter byte-equivalence > sse types + client + resources stable > sse src/resources/events.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use futures_util::{self, Stream};
use reqwest;
use serde::{Serialize, Deserialize};
use tokio_tungstenite;
use urlencoding;
use crate::client::ClientInner;
use crate::errors::Error;
use crate::result::SdkResult;
use crate::runtime::*;
use crate::types::*;
use crate::sse::{SseEvent, parse_sse_stream};
use crate::ws::TypedWebSocket;

pub struct EventsResource {
	pub(crate) client: std::sync::Arc<crate::client::ClientInner>,
}

impl EventsResource {
	/// Stream events
	pub fn stream(&self, opts: &EventsStreamOpts) -> impl Stream<Item = Result<SseEvent, Error>> {
		let last_event_id_owned = opts.last_event_id.clone();
		let opts_headers_owned = opts.headers.clone();
		let topic_owned = opts.topic.clone();
		let url_path = "/events/stream".to_string();
		let mut query: Vec<(String, String)> = Vec::new();
		if let Some(ref v) = topic_owned { query.push(("topic".to_string(), v.clone())); }
		let cfg_clone = self.client.cfg.clone();
		let client_clone = self.client.http_client.clone();
		async_stream::stream! {
			use crate::sse::parse_sse_stream;
			let mut req_headers = std::collections::HashMap::new();
			req_headers.insert("Accept".to_string(), "text/event-stream".to_string());
			if let Some(ref lei) = last_event_id_owned {
				req_headers.insert("Last-Event-ID".to_string(), lei.clone());
			}
			for (k, v) in &cfg_clone.headers {
				req_headers.insert(k.clone(), v.clone());
			}
			if let Some(ref oh) = opts_headers_owned {
				for (k, v) in oh { req_headers.insert(k.clone(), v.clone()); }
			}
			let mut req = client_clone
				.get(format!("{}{}", cfg_clone.base_url, url_path))
				.header("Accept", "text/event-stream");
			if let Some(ref lei) = last_event_id_owned {
				req = req.header("Last-Event-ID", lei.clone());
			}
			match req.send().await {
				Err(e) => { yield Err(Error::Transport(e)); return; }
				Ok(r) => {
					use futures_util::StreamExt;
					let mut s = std::pin::pin!(parse_sse_stream(r));
					while let Some(item) = s.next().await { yield item; }
				}
			}
		}
	}
	
}

pub(crate) fn new_events_resource(client: &std::sync::Arc<crate::client::ClientInner>) -> EventsResource {
	EventsResource {
		client: std::sync::Arc::clone(client),
	}
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct EventsStreamOpts {
	#[serde(rename = "last-event-id", skip_serializing_if = "Option::is_none")]
	pub last_event_id: Option<String>,
	#[serde(skip_serializing_if = "Option::is_none")]
	pub topic: Option<String>,
	#[serde(skip)]
	pub headers: Option<std::collections::HashMap<String, String>>,
}
"
`;

exports[`rust-emitter byte-equivalence > sse types + client + resources stable > sse src/resources/mod.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

pub mod events;
pub use events::EventsResource;
"
`;

exports[`rust-emitter byte-equivalence > sse types + client + resources stable > sse src/types.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports)]
use serde::{Serialize, Deserialize};
use serde_repr::{Serialize_repr, Deserialize_repr};
use std::collections::HashMap;

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ErrField {
	pub error_key: String,
	pub message: String,
	pub path: String,
}
"
`;

exports[`rust-emitter byte-equivalence > ws types + client + resources stable > ws src/client.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use once_cell;
use reqwest;
use tokio_tungstenite;
use urlencoding;
use futures_util::{self, Stream};
use crate::errors::Error;
use crate::resources::*;
use crate::result::SdkResult;
use crate::runtime::ClientConfig;
use crate::sse::SseEvent;
use crate::types::*;
use crate::ws::TypedWebSocket;

pub(crate) struct ServiceEntry {
	pub method: &'static str,
	pub path: &'static str,
	pub params: &'static [&'static str],
	pub sse: bool,
	pub ws: bool,
	pub realtime: bool,
	pub invalidate: &'static [&'static str],
}

pub(crate) static INVALIDATION_MAP: once_cell::sync::Lazy<std::collections::HashMap<&'static str, std::collections::HashMap<&'static str, ServiceEntry>>> =
	once_cell::sync::Lazy::new(|| {
		let mut map = std::collections::HashMap::new();
		{
			let mut resource_map = std::collections::HashMap::new();
			resource_map.insert("subscribe", ServiceEntry { method: "GET", path: "/realtime/subscribe", params: &[], sse: false, ws: true, realtime: false, invalidate: &[] });
			map.insert("realtime", resource_map);
		}
		map
	});

pub(crate) struct ClientInner {
	pub(crate) cfg: crate::runtime::ClientConfig,
	pub(crate) stale: Option<crate::invalidation::StaleTracker>,
	pub(crate) http_client: reqwest::Client,
}

/// Client is the generated SDK client.
pub struct Client {
	pub(crate) inner: std::sync::Arc<ClientInner>,
	realtime: RealtimeResource,
}

impl Client {
	/// new creates a new SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime::ClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: ClientConfig.base_url must not be empty");
		}
		/* http_client: None → build a default reqwest::Client */
		let http_client = if cfg.http_client.is_none() {
			reqwest::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation::StaleTracker::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(ClientInner { cfg, stale, http_client });
		Client {
			realtime: crate::resources::realtime::new_realtime_resource(&inner),
			inner,
		}
	}

	/// realtime returns a reference to the RealtimeResource.
	pub fn realtime(&self) -> &RealtimeResource {
		&self.realtime
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub async fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path).await,
			None => false,
		}
	}

}

pub(crate) struct SyncClientInner {
	pub(crate) cfg: crate::runtime_sync::SyncClientConfig,
	pub(crate) stale: Option<crate::invalidation_sync::StaleTrackerSync>,
	pub(crate) http_client: reqwest::blocking::Client,
}

/// SyncClient is the generated blocking SDK client.
/// WARNING: Do not use from inside a tokio async task — reqwest blocking will deadlock.
pub struct SyncClient {
	pub(crate) inner: std::sync::Arc<SyncClientInner>,
}

impl SyncClient {
	/// new creates a new blocking SDK client. base_url must be non-empty.
	pub fn new(mut cfg: crate::runtime_sync::SyncClientConfig) -> Self {
		if cfg.base_url.is_empty() {
			panic!("honey sdk: SyncClientConfig.base_url must not be empty");
		}
		let http_client = if cfg.http_client.is_none() {
			reqwest::blocking::Client::new()
		} else {
			cfg.http_client.take().unwrap()
		};
		if cfg.auth_header_name.is_none() {
			cfg.auth_header_name = Some("Authorization".to_string());
		}
		if cfg.auth_header_prefix.is_none() {
			cfg.auth_header_prefix = Some("Bearer ".to_string());
		}
		let stale = if let Some(ref inv) = cfg.invalidation {
			if inv.stale_time > 0 {
				Some(crate::invalidation_sync::StaleTrackerSync::new(Some(inv)))
			} else { None }
		} else { None };
		let inner = std::sync::Arc::new(SyncClientInner { cfg, stale, http_client });
		SyncClient {
			inner,
		}
	}

	/// is_stale reports whether (method, path) is currently within an active stale window.
	pub fn is_stale(&self, method: &str, path: &str) -> bool {
		match self.inner.stale {
			Some(ref s) => s.is_stale(method, path),
			None => false,
		}
	}

}
"
`;

exports[`rust-emitter byte-equivalence > ws types + client + resources stable > ws src/resources/mod.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

pub mod realtime;
pub use realtime::RealtimeResource;
"
`;

exports[`rust-emitter byte-equivalence > ws types + client + resources stable > ws src/resources/realtime.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports, unused_variables, dead_code)]
use std::sync::Arc;
use futures_util::{self, Stream};
use reqwest;
use serde::{Serialize, Deserialize};
use tokio_tungstenite;
use urlencoding;
use crate::client::ClientInner;
use crate::errors::Error;
use crate::result::SdkResult;
use crate::runtime::*;
use crate::types::*;
use crate::sse::SseEvent;
use crate::ws::TypedWebSocket;

pub struct RealtimeResource {
	pub(crate) client: std::sync::Arc<crate::client::ClientInner>,
}

impl RealtimeResource {
	/// Subscribe to realtime updates
	pub async fn subscribe(&self, opts: &RealtimeSubscribeOpts) -> Result<TypedWebSocket, Error> {
		let url_path = "/realtime/subscribe".to_string();
		let mut query_str = String::new();
		if !query_str.is_empty() { query_str.push('&'); }
		query_str.push_str(&format!("{}={}", "channel", urlencoding::encode(&opts.channel)));
		if let Some(ref rt) = opts.reconnect_token {
			if !query_str.is_empty() { query_str.push('&'); }
			query_str.push_str(&format!("reconnect_token={}", urlencoding::encode(rt)));
		}
		let full_url = if query_str.is_empty() {
			format!("{}{}", self.client.cfg.base_url, url_path)
		} else {
			format!("{}{}?{}", self.client.cfg.base_url, url_path, query_str)
		};
		/* convert http(s) → ws(s) */
		let ws_url = full_url.replacen("https://", "wss://", 1).replacen("http://", "ws://", 1);
		use tokio_tungstenite::tungstenite::client::IntoClientRequest;
		let mut req = ws_url.as_str().into_client_request()
			.map_err(|e| Error::Other(e.to_string()))?;
		if let Some(ref protos) = opts.protocols {
			if !protos.is_empty() {
				req.headers_mut().insert(
					"Sec-WebSocket-Protocol",
					protos.join(", ").parse().map_err(|e: tokio_tungstenite::tungstenite::http::header::InvalidHeaderValue| Error::Other(e.to_string()))?,
				);
			}
		}
		let (stream, _) = tokio_tungstenite::connect_async(req).await
			.map_err(|e| Error::Other(e.to_string()))?;
		Ok(TypedWebSocket::new(stream))
	}
	
}

pub(crate) fn new_realtime_resource(client: &std::sync::Arc<crate::client::ClientInner>) -> RealtimeResource {
	RealtimeResource {
		client: std::sync::Arc::clone(client),
	}
}

#[derive(Debug, Clone, Default, serde::Serialize, serde::Deserialize)]
pub struct RealtimeSubscribeOpts {
	pub channel: String,
	#[serde(skip_serializing_if = "Option::is_none")]
	pub reconnect_token: Option<String>,
	pub protocols: Option<Vec<String>>,
}
"
`;

exports[`rust-emitter byte-equivalence > ws types + client + resources stable > ws src/types.rs 1`] = `
"/* Code generated by honey. DO NOT EDIT. */

#![allow(unused_imports)]
use serde::{Serialize, Deserialize};
use serde_repr::{Serialize_repr, Deserialize_repr};
use std::collections::HashMap;

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ErrField {
	pub error_key: String,
	pub message: String,
	pub path: String,
}
"
`;
